@@ -539,7 +539,7 @@ public class ContinuousPagingService
             this.pageWriter = new ContinuousPageWriter(state.getConnection(),
                                                        pagingOptions.maxPagesPerSecond(),
                                                        config);
-            this.avgRowSize = ResultSet.estimatedRowSize(statement.cfm, selection.getColumns());
+            this.avgRowSize = ResultSet.estimatedRowSize(statement.cfm, selection.getColumnMapping());
 
             allocatePage(1);
         }
